src/pages/InterestedList/styles.css
#interested-list-page h2 {
  color: var(--text-active);
  padding-top: 36px;
  font-size: 36px;
  padding-bottom: 24px;
}

#interested-list-page #interested-list {
  width: 100%;
  background-color: var(--background-tabs);
  padding: 6px 6px;
  border-radius: 24px;
  color: var(--text-inactive);
}
#interested-list-page #interested-list tr td {
  padding: 12px 16px;
}
#interested-list-page #interested-list tbody tr:last-of-type td {
  padding-bottom: 18px;
}

#interested-list-page #interested-list thead {
  color: var(--text-active);
  font-size: 28px;
  font-weight: 700;
}

#interested-list-page #interested-list tbody {
  font-size: 20px;
}
#interested-list-page #interested-list tbody tr:hover {
  color: var(--text-active);
}

#interested-list-page #interested-list tr td {
  word-break: break-all;
}

#interested-list-page #interested-list tr td:first-of-type {
  width: 220px;
}
#interested-list-page #interested-list tr td:nth-of-type(2) {
  width: 220px;
}
#interested-list-page #interested-list tr td:nth-of-type(3) {
  width: 400px;
}
#interested-list-page #interested-list tr td:last-of-type {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 160px;
}

#interested-list-page #interested-list tbody tr td button {
  visibility: hidden;

  padding-top: 4px;
  padding-bottom: 4px;
  border-radius: 18px;
  font-size: 24px;
  height: 36px;
  border-width: 0;

  color: var(--text-active);
  font-weight: 700;

  width: 150px;
}
#interested-list-page #interested-list tbody tr:hover td button {
  visibility: visible;
}
#interested-list-page #interested-list tbody tr td button:first-of-type {
  background-color: var(--cta);
  margin-bottom: 8px;
}
#interested-list-page #interested-list tbody tr td button:last-of-type {
  background-color: #ff3333;
}
#interested-list-page #interested-list tbody tr:hover td button:hover {
  opacity: 0.8;
  cursor: pointer;
}

#interested-list-page h3 {
  color: var(--text-inactive);
  margin-top: 32px;
  font-size: 32px;
}

